--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: my-python-app
-        image: my-python-app
+        image: my-python-app:1.0
         imagePullPolicy: Never
         ports:
         - containerPort: 5000
